# smoke_detection

./: .gitignore  .inference_from_kafka_demo_v1.py.swo  .temp.py.swo  CameraTest.py  consume_video.py  gst_rtsp_server.py  inference_from_kafka.py  inference_from_kafka_demo_v1.py  kafka_consume.py  kafka_cv2_consume_test.py  kafka_cv2_test.py  kafka_produce.py  kafka_produce_mp.py  nohup.out  produce_video.py  produce_video_wo_encode.py  produce_video_wo_encode2.py  pyproject.toml  rc.local  readme.md  result.txt  temp.py  watchdog.sh
checkpoints/: gmm_params.pkl
src/: .inference_from_kafka_demo_v1.py.swp  consume_video.py  remove_log_files.py  rtsp_ffmpeg.py
src/data_streaming/: kafka_consume.py  kafka_produce_threading.py  produce_video_ffmpeg.py
