[tool.poetry]
name = "rpi4-kafka-test"
version = "0.1.0"
description = ""
authors = ["dripcharacter <wsms8646@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
